Prepare to pypi

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 *.pyc
 Python_video_annotator_module_tracking\.egg-info/
+
+build/
+develop-eggs/
+dist/
+eggs/
+.eggs/
+sdist/
+var/
+wheels/
+*.egg-info/
+*.egg
